--- a/templates/settings.html
+++ b/templates/settings.html
@@ -27,7 +27,7 @@
                         </div>
                         <button type="submit" class="btn btn-default">Update</button>
                     </form>
-                    <form action="#" class="form-inline margin40" method="post">
+                    <form action="{{ url_for('edit_council_semester') }}" class="form-inline margin40" method="post">
                         <div class="form-group">
                             <label for="council_semester">Council Semester: </label>
                             <input type="text" pattern="\d{2}[FS]" class="form-control" id="council_semester" name="council_semester" value="{{ council_semester }}">
@@ -38,7 +38,7 @@
                 <div class="col-md-6">
                     <div class="margin40">
                         <b>Current Grants Pack: </b><input type="text" value="{{ grants_pack }}" class="form-control" disabled="disabled" style="max-width:170px;display:inline-block;">
-                        <br><i>To advance, submit current grants pack</i>
+                        <br><i>To advance, submit current grants pack or update council semester</i>
                     </div>
                 </div>
             </div>
