Implemented Email helper functions

--- a/templates/grant_status.html
+++ b/templates/grant_status.html
@@ -6,7 +6,7 @@
 
 {% block main %}
 
-    <div class="row">
+    <div class="row margin40">
         <div class="col-md-12 center">
             <h1>{{ grant.project }}</h1>
             <h4>
@@ -25,7 +25,7 @@
     </div>
     
     <div class="row flexbox">
-        <div class="col-md-4 right-line col">
+        <div class="col-md-4 right-line col margin15">
             <div class="center padding-bottom-20">
                 <b>Grant Info</b>
             </div>
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 right-line col">
+        <div class="col-md-4 right-line col margin15">
             <div class="center padding-bottom-20">
                 <b>Progress</b>
             </div>
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col">
+        <div class="col-md-4 col margin15">
             <div class="center padding-bottom-20">
                 <b>Actions</b>
             </div>
