--- a/templates/email/grant_submit.html
+++ b/templates/email/grant_submit.html
@@ -4,12 +4,12 @@
 </div>
 
 <div style="text-align:left;">
-    <p>Dear {{ grant['contact_first_name'] }} {{ grant['contact_last_name'] }},</p>
-    <p>Your grant application for <i>{{ grant['project'] }}</i> has been successfully submitted. The UC is in the process of reviewing your application
-        {%- if not grant['is_small_grant'] %}
+    <p>Dear {{ grant.contact_first_name }} {{ grant.contact_last_name }},</p>
+    <p>Your grant application for <i>{{ grant.project }}</i> has been successfully submitted. The UC is in the process of reviewing your application
+        {%- if not grant.is_small_grant %}
              and you will receive an email within the coming week about the interview time scheduled for this grant
         {% endif -%}.</p>
-    <p>You can track the status of your grant <a href="{{ url_for('grant', grant_id=grant['grant_id'], _external=True)}}">here</a>.</p>
+    <p>You can track the status of your grant <a href="{{ url_for('grant', grant_id=grant.grant_id, _external=True)}}">here</a>.</p>
     <p>Best,
     <br>Nicholas Boucher
     <br><i>Treasurer, Undergraduate Council</i></p>
