--- a/templates/grant_status.html
+++ b/templates/grant_status.html
@@ -74,6 +74,12 @@
         </div>
     </div>
     
+    <div class="navbar navbar-fixed-bottom center" style="color:#b1b1b1;"><i>Brought to you by Nicholas Boucher '19</i></div>
+    
+{% endblock %}
+
+{% block scripts %}
+    
     <script src="/static/progressbar.min.js"></script>
     <script type="text/javascript">
         var bar = new ProgressBar.Line(progress_container, {
