--- a/templates/review_receipts.html
+++ b/templates/review_receipts.html
@@ -10,7 +10,7 @@
         <div class="col-md-12">
             <div class="center">
                 <h1>Treasurer</h1>
-                <h3>These grants are ready to be receipt-processed.</h3>
+                <h3>These grants are ready to be processed.</h3>
             </div>
         </div>
     </div>
