Implemented Interview Scheduling Page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -65,7 +65,7 @@
                 					<ul class="dropdown-menu" role="menu">
                 					    <li><a href="{{ url_for('grants_packs') }}">Grants Packs</a></li>
                 						<li><a href="{{ url_for('review_receipts') }}">Treasurer</a></li>
-                        				<li><a href="#">Schedule</a></li>
+                        				<li><a href="{{ url_for('schedule_interviews') }}">Schedule</a></li>
                         				<li><a href="{{ url_for('settings') }}">Settings</a></li>
                 					</ul>
                 				</li>
