Fixed HTML Bug in editing grant 'other' field

--- a/templates/interview_grant.html
+++ b/templates/interview_grant.html
@@ -174,7 +174,7 @@
                         <div class="col-md-8">
                             <div class="form-group">
                                 <label for="other_allocated_notes">Other Comment:</label>
-                                <textarea class="form-control resize-vertical" rows="1" name="other_allocated_notes"><{{ grant.other_allocated_notes | suppress_none }}/textarea>
+                                <textarea class="form-control resize-vertical" rows="1" name="other_allocated_notes">{{ grant.other_allocated_notes | suppress_none }}</textarea>
                             </div>
                         </div>
                     </div>
