Updated 'Check Ready' email template

--- a/templates/email/check.html
+++ b/templates/email/check.html
@@ -8,8 +8,10 @@
     
     {% if grant.is_upfront %}
         <p>The funds for your upfront grant <i>{{ grant.project }}</i> are now available. A check has been written to 
-            {{ grant.organization }} for <b>{{ grant.amount_dispensed }}</b>. Please respond to this email to coordinate
-            a time to pick this up from the UC Treasurer.</p>
+            {{ grant.organization }} for <b>{{ grant.amount_dispensed | usd }}</b>. Your check will be available for pickup
+            during the weekly UC Financial Committee meetings, which occur on Wednesday nights from 7-8:30pm in the basement of Memorial Hall.
+            You are welcome to have any member from your organization pickup your check on any Wednesday at your earliest convenience.
+            If that time does not work, please respond to this email to coordinate a time to pick this up from the UC Treasurer.</p>
     {% else %}
     
         <p>You have completed the grant process for <i>{{ grant.project }}</i>! A check has been written to {{ grant.organization }} for
