Added grant status support for Upfront Grants

--- a/templates/grant_allocations.html
+++ b/templates/grant_allocations.html
@@ -108,8 +108,7 @@
                 </tbody>
             </table>
             <div class="center">
-                <p>The UC will fund up to these amounts in each category.</p>
-                <h2>Total Grant Amount: {{ grant.amount_allocated | usd }}</h2>
+                <h2 class="margin40">Total Grant Amount: {{ grant.amount_allocated | usd }}</h2>
                 {% if grant.percentage_cut %}
                     <p style="margin-top:25px;">Sometimes, our budget requires that we make across the board cuts to all grants. If that is the case, then the total grant amount
                     may be less than the summation of the maximum amount that we will fund in each funding category. The percentage cut for the
