--- a/templates/grant_status.html
+++ b/templates/grant_status.html
@@ -52,9 +52,15 @@
                         <i class="fa fa-{{ 'check-' if grant.interview_occurred }}square-o" aria-hidden="true"></i> Attend Interview<br>
                     {% endif %}
                     <i class="fa fa-{{ 'check-' if grant.council_approved }}square-o" aria-hidden="true"></i> Passed by Council<br>
-                    <i class="fa fa-{{ 'check-' if grant.receipts_submitted }}square-o" aria-hidden="true"></i> Submit Receipts<br>
-                    <i class="fa fa-{{ 'check-' if grant.is_paid }}square-o" aria-hidden="true"></i> Receipts Reviewed<br>
-                    <i class="fa fa-{{ 'check-' if grant.is_paid }}square-o" aria-hidden="true"></i> Funds Dispensed
+                    {% if grant.is_upfront %}
+                        <i class="fa fa-{{ 'check-' if grant.is_paid }}square-o" aria-hidden="true"></i> Funds Dispensed<br>
+                        <i class="fa fa-{{ 'check-' if grant.receipts_submitted }}square-o" aria-hidden="true"></i> Submit Receipts<br>
+                        <i class="fa fa-{{ 'check-' if grant.is_paid }}square-o" aria-hidden="true"></i> Receipts Reviewed
+                    {% else %}
+                        <i class="fa fa-{{ 'check-' if grant.receipts_submitted }}square-o" aria-hidden="true"></i> Submit Receipts<br>
+                        <i class="fa fa-{{ 'check-' if grant.is_paid }}square-o" aria-hidden="true"></i> Receipts Reviewed<br>
+                        <i class="fa fa-{{ 'check-' if grant.is_paid }}square-o" aria-hidden="true"></i> Funds Dispensed
+                    {% endif %}
                 </div>
             </div>
         </div>
