--- a/templates/email/interview_scheduled.html
+++ b/templates/email/interview_scheduled.html
@@ -5,7 +5,7 @@
 
 <div style="text-align:left;">
     <p>Dear {{ grant.contact_first_name }} {{ grant.contact_last_name }},</p>
-    <p>An interview has been scheduled for your grant application <i>{{ grant.project }}</i>. The interview is schuled for:</p>
+    <p>An interview has been scheduled for your grant application <i>{{ grant.project }}</i>. The interview is scheduled for:</p>
     <div style="text-align:center;margin:15px;font-size:1.5em;"><b>{{ grant.interview_schedule_date | datetime }}</b></div>
     <p>The interview will occur in the basement of Memerial Hall in the classrooms just beyond "FlyBy." Please send a representative
         from your organization to attend the interview (it does not have to be you).
