Added Dont be Late Suckers Email Ammendment

--- a/templates/email/interview_scheduled.html
+++ b/templates/email/interview_scheduled.html
@@ -16,6 +16,7 @@
             benefits you must have one representative from each of <i>{{ grant.collaborators }}</i> attend the interview in addition
             to the representative from {{ grant.organization }}.
         {% endif -%}
+        If you are more than 10 minutes late to your assigned interview, you may not be seen until the next interview week.
     </p>
     <p>As always, you can track the status of your grant <a href="{{ url_for('grant', grant_id=grant.grant_id, _external=True)}}">here</a>.</p>
     <p>Best,
